--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -4,13 +4,14 @@ body {
     color: #484848;
     font-size: 14px;
     font-family: Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
 }
 .container {
     max-width: 1000px;
     width: 100%;
     margin: 30px auto;
     display: flex;
-    justify-content: start;
-    align-items: center;
-
+    flex-direction: column;
+    flex: 1 0 auto
 }
